uat-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bnctl-dolphinscheduler-uat-ns
  labels:
    name: bnctl-dolphinscheduler-uat-ns
