prod-cluster-master.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cluster-master
  namespace: bnctl-dolphinscheduler-prod-ns
  labels:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: cluster
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cluster-master
spec:
  serviceName: cluster-master-headless
  replicas: 2
  podManagementPolicy: Parallel
  revisionHistoryLimit: 10

  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain

  selector:
    matchLabels:
      app.kubernetes.io/component: master
      app.kubernetes.io/instance: cluster
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: cluster-master

  updateStrategy:
    type: RollingUpdate

  template:
    metadata:
      labels:
        app.kubernetes.io/component: master
        app.kubernetes.io/instance: cluster
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: cluster-master
    spec:
      serviceAccountName: cluster
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      terminationGracePeriodSeconds: 30

      containers:
        - name: cluster-master
          image: apache/dolphinscheduler-master:latest
          imagePullPolicy: IfNotPresent

          ports:
            - name: master-port
              containerPort: 5678
            - name: actuator-port
              containerPort: 5679

          resources:
            limits:
              cpu: "1"
              memory: 2Gi
            requests:
              cpu: 512m
              memory: 1Gi

          volumeMounts:
            - name: cluster-master
              mountPath: /opt/dolphinscheduler/logs
            - name: config-volume
              mountPath: /opt/dolphinscheduler/conf/common.properties
              subPath: common.properties

      volumes:
        - name: config-volume
          configMap:
            name: cluster-configs

  volumeClaimTemplates:
    - metadata:
        name: cluster-master
        labels:
          app.kubernetes.io/instance: cluster
          app.kubernetes.io/managed-by: Helm
          app.kubernetes.io/name: cluster-master
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 2Gi
        volumeMode: Filesystem
