prod-cluster-worker.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cluster-worker
  namespace: bnctl-dolphinscheduler-prod-ns
  labels:
    app.kubernetes.io/component: worker
    app.kubernetes.io/instance: cluster
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cluster-worker
spec:
  serviceName: cluster-worker-headless
  replicas: 2
  podManagementPolicy: Parallel
  revisionHistoryLimit: 10

  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain

  selector:
    matchLabels:
      app.kubernetes.io/component: worker
      app.kubernetes.io/instance: cluster
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: cluster-worker

  updateStrategy:
    type: RollingUpdate

  template:
    metadata:
      labels:
        app.kubernetes.io/component: worker
        app.kubernetes.io/instance: cluster
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: cluster-worker
    spec:
      serviceAccountName: cluster
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsUser: 0
        runAsGroup: 0

      containers:
      - name: cluster-worker
        image: btthanhk4/dolphin-worker-custom:v2
        imagePullPolicy: IfNotPresent

        ports:
        - name: worker-port
          containerPort: 1234
        - name: actuator-port
          containerPort: 1235

        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: 512m
            memory: 1Gi

        volumeMounts:
        - name: cluster-worker-data
          mountPath: /tmp/dolphinscheduler
        - name: cluster-worker-logs
          mountPath: /opt/dolphinscheduler/logs
        - name: spark-code-sync
          mountPath: /opt/spark-app
        - name: config-volume
          mountPath: /opt/dolphinscheduler/conf/common.properties
          subPath: common.properties

      volumes:
      - name: spark-code-sync
        persistentVolumeClaim:
          claimName: spark-code-sync-pvc
      - name: cluster-worker-logs
        emptyDir: {}
      - name: config-volume
        configMap:
          name: cluster-configs

  volumeClaimTemplates:
  - metadata:
      name: cluster-worker-data
      labels:
        app.kubernetes.io/instance: cluster
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: cluster-worker-data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: longhorn
      resources:
        requests:
          storage: 2Gi
      volumeMode: Filesystem
