uat-cluster-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-api
  namespace: bnctl-dolphinscheduler-uat-ns
  labels:
    app.kubernetes.io/component: api
    app.kubernetes.io/instance: cluster
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cluster-api
spec:
  replicas: 1
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      app.kubernetes.io/component: api
      app.kubernetes.io/instance: cluster
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: cluster-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app.kubernetes.io/component: api
        app.kubernetes.io/instance: cluster
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: cluster-api
    spec:
      serviceAccountName: cluster
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      terminationGracePeriodSeconds: 30

      containers:
        - name: cluster-api
          image: apache/dolphinscheduler-api:latest
          imagePullPolicy: IfNotPresent

          ports:
            - name: api-port
              containerPort: 12345
            - name: python-api-port
              containerPort: 25333

          livenessProbe:
            httpGet:
              path: /dolphinscheduler/actuator/health/liveness
              port: 12345
            initialDelaySeconds: 90
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5

          readinessProbe:
            httpGet:
              path: /dolphinscheduler/actuator/health/readiness
              port: 12345
            initialDelaySeconds: 120
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5

          resources:
            limits:
              cpu: "1"
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 1Gi

          volumeMounts:
            - name: cluster-api-resources
              mountPath: /opt/dolphinscheduler/resources
            - name: cluster-api
              mountPath: /opt/dolphinscheduler/logs
            - name: config-volume
              mountPath: /opt/dolphinscheduler/api-server/conf/common.properties
              subPath: common.properties

      volumes:
        - name: cluster-api-resources
          emptyDir: {}
        - name: cluster-api
          emptyDir: {}
        - name: config-volume
          configMap:
            name: cluster-configs
